--- a/_posts/2019-05-06-python-1.md
+++ b/_posts/2019-05-06-python-1.md
@@ -23,6 +23,12 @@ python3
 a, b, c ,d = input.split() 
 
 ```  
+
+```python
+>>> print("{0}, {1}, {2}, {3}".format(a, b, c, d))
+0, 1, 2, 3
+``` 
+
 <br/>
 
 인풋값은 str 로 저장되기 때문에 별도의 캐스팅 과정이 필요하다.             
