fix python-1 post

--- a/_posts/2019-05-06-python-1.md
+++ b/_posts/2019-05-06-python-1.md
@@ -15,21 +15,18 @@ python2
 a, b, c ,d = raw_input.split()
 
 ```  
-  
-
 python3
 ```python
 
 a, b, c ,d = input.split() 
 
-```  
-
+``` 
+<br/>
+결과값 
 ```python
 >>> print("{0}, {1}, {2}, {3}".format(a, b, c, d))
 0, 1, 2, 3
 ``` 
-
-<br/>
 
 인풋값은 str 로 저장되기 때문에 별도의 캐스팅 과정이 필요하다.             
 ```python
