--- a/_posts/2019-05-07-linux-01.md
+++ b/_posts/2019-05-07-linux-01.md
@@ -5,9 +5,33 @@ categories: linux
 ---
 우분투에서 tree 명령어 설치하기  
 `apt-get install tree`  
-  
+```console
+$ apt-get install tree
+$ tree
+
+├── workspace
+│   ├── \
+│   ├── random.sh
+│   ├── input2.c
+│   ├── list.sh
+│   ├── local.sh
+│   ├── range.sh
+│   └── random.sh
+```      
 명령어를 설치하지 않고 find 명령어로 간단하게 출력할 수 있다.  
 `find | sed 's|[^/]*/|- |g'`  
 
+```console
+$ find | sed 's|[^/]*/|- |g'
+
+- workspace
+- - random.sh
+- - input2.c
+- - range.sh
+- - list.sh
+- - input2
+- - \
+- - local.sh
+```
 
     
