--- a/_posts/2019-05-06-python-1.md
+++ b/_posts/2019-05-06-python-1.md
@@ -28,10 +28,10 @@ a, b, c ,d = input.split()
 0, 1, 2, 3
 ``` 
 
-인풋값은 str 로 저장되기 때문에 별도의 캐스팅 과정이 필요하다.    
+인풋값은 str 로 저장되기 때문에 연산하려면 캐스팅 과정이 필요하다.    
 ```python
 >>> type(a)
-<type 'str'>
 
+<type 'str'>
 ```
 
